Creazione database e parte del progetto 2

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.RegisterActivity"  android:screenOrientation="portrait"/>
-        <activity android:name=".activities.UserActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name=".activities.CameriereActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name=".activities.OrdinaActivity" android:screenOrientation="portrait"></activity>
     </application>
+
 
 </manifest>
