--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.gian2.apperitivogmm">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,6 +21,7 @@
         <activity android:name=".activities.RegisterActivity"  android:screenOrientation="portrait"/>
         <activity android:name=".activities.CameriereActivity" android:screenOrientation="portrait"></activity>
         <activity android:name=".activities.OrdinaActivity" android:screenOrientation="portrait"></activity>
+
     </application>
 
 
