--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,11 +19,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.RegisterActivity"  android:screenOrientation="portrait"/>
-        <activity android:name=".activities.CameriereActivity" android:screenOrientation="portrait"></activity>
-        <activity android:name=".activities.OrdinaActivity" android:screenOrientation="portrait"></activity>
-
+        <activity
+            android:name=".activities.RegisterActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.CameriereActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.OrdinaActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.ConfermaOrdineActivity"
+            android:label="@string/title_activity_conferma_ordine"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
-
 
 </manifest>
