--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
             android:name=".activities.ConfermaOrdineActivity"
             android:label="@string/title_activity_conferma_ordine"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".activities.ContoActivity"
+            android:screenOrientation="portrait" ></activity>
     </application>
 
 </manifest>
